tests/fixtures/invalid/pow_dict_none_bytes.py
# Cannot call pow() with Dict[str, int], None, Bytes
x = pow({"a": 1}, None, b"hello")
